...
    <string name="action_settings">Settings</string>

    <string name="input_title_here">Input title here…</string>
    <string name="add_label">Add label</string>
    <string name="may_22_2018">May 22, 2018</string>
    <string name="input_note_here">Input note here…</string>
    <string name="save">Save</string>

    <string name="content">Note to store.</string>
    <string name="input_link_here">Input link here…</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
...
