<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddNotesActivity">

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_send_white_24dp"
        android:title="@string/save"
        app:showAsAction="always"/>

</menu>