<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">


        <android.support.design.widget.SubtitleCollapsingToolbarLayout
            android:id="@+id/subtitlecollapsingtoolbarlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

            <ImageView
                android:id="@+id/expandedImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/savenote"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7" />

        </android.support.design.widget.SubtitleCollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/activity_viewnotescontent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/cog"
        android:onClick=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_add_black_24dp"
        tools:ignore="OnClick" />


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/menu_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/cardview_dark_background"
            app:cardElevation="14dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <Button
                    android:id="@+id/btn_timer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_timer_icon"
                    android:drawablePadding="8dp"
                    android:layout_marginTop="10dp"
                    android:theme="@style/NormalButtonTheme"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical|center_horizontal|start"
                    android:text="Set Reminder" />
                <Button
                    android:id="@+id/btn_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_edit_black_24dp"
                    android:drawablePadding="8dp"
                    android:theme="@style/NormalButtonTheme"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical|center_horizontal|start"
                    android:text="Edit Note" />

                <Button
                    android:id="@+id/btn_collaborate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_people_black_24dp"
                    android:drawablePadding="8dp"
                    android:theme="@style/NormalButtonTheme"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical|center_horizontal|start"
                    android:text="Collaborate"/>

                <Button
                    android:id="@+id/btn_share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_share_black_24dp"
                    android:drawablePadding="8dp"
                    android:theme="@style/NormalButtonTheme"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical|center_horizontal|start"
                    android:text="Share Note" />

                <Button
                    android:id="@+id/btn_delete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_delete_black_24dp"
                    android:drawablePadding="8dp"
                    android:layout_marginBottom="10dp"
                    android:theme="@style/DeleteButtonTheme"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical|center_horizontal|start"
                    android:text="Delete Note" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>